# agent-orchestra

./: .gitignore  CLAUDE.md  Makefile  README.md  pyproject.toml
docs/: architecture-hooks.html  architecture-orchestra.html  harness-architecture.html  hook-example.html  hooks-一张图.html  hooks-机制原理.md  subagent-isolation.md
examples/: .gitkeep
scripts/: diag_m5_timing.py  verify_m5_no_overspawn.py
specs/: 00-README-导读.md  01-功能需求清单.md  04-参考-CC编排原理.md  05-技术架构设计.md  06-多agent编排规格.md  07-迭代开发计划.md  08-原理问答.md
src/orchestra/: __init__.py  cli.py  context.py  coordinator.py  loop.py  mailbox.py  message.py  model.py  orchestration.py  subagent.py  tool.py
src/orchestra/providers/: __init__.py  bedrock.py
tests/: test_m3_agent_loop.py  test_m4_orchestration.py  test_m5_5_isolation.py  test_m5_subagent.py  test_m7_mailbox.py  test_m7_send_message.py  test_smoke.py
